--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fal-video-studio",
-  "version": "0.1.0",
+  "name": "synapse-studio",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -64,6 +64,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/throttle-debounce": "^5.0.2",
+    "autoprefixer": "^10.4.20",
     "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
