--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
@@ -32,6 +33,7 @@
     "@remotion/media-utils": "4.0.249",
     "@remotion/player": "4.0.249",
     "@remotion/preload": "4.0.249",
+    "@tailwindcss/postcss": "^4.0.14",
     "@tanstack/react-query": "^5.62.7",
     "@uploadthing/react": "^7.1.5",
     "@vercel/analytics": "^1.4.1",
@@ -49,6 +51,7 @@
     "react-hook-form": "^7.54.0",
     "react-hotkeys-hook": "^4.6.1",
     "remotion": "4.0.249",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "throttle-debounce": "^5.0.2",
@@ -66,8 +69,8 @@
     "@types/throttle-debounce": "^5.0.2",
     "autoprefixer": "^10.4.20",
     "husky": "^9.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
 }
